Add cards section & quote section

--- a/src/index.html
+++ b/src/index.html
@@ -43,5 +43,37 @@
 C/O https://placeholder.com/ " alt="image placeholder">
         </div>
         </header>
-  </body>
-</html>
+        <main class="main__content">
+            <section class="info container">
+                <h2 class="info__title">Some random information.</h2>
+                <div class="info__items">
+
+                    <article class="info__item">
+                        <p class="info__description">this is some subtext under an illustration or image</p>
+                    </article>
+                    <article class="info__item">
+                        <p class="info__description">this is some subtext under an illustration or image</p>
+                    </article>
+                    <article class="info__item">
+                        <p class="info__description">this is some subtext under an illustration or image</p>
+                </article>
+                <article class="info__item">
+                    <p class="info__description">this is some subtext under an illustration or image</p>
+                </article>
+            </div>
+            </section>
+            <section class="quote">
+                <figure class="container">
+                    <q class="quote__text"><em>You need a little bit of rain to have a little bit of rainbow</em> </q>
+                    <figcaption class="quote__author">
+                        &mdash; XQC, <cite>2018</cite>
+                    </figcaption>
+                </figure>
+            </section>
+            </div>
+        </main>
+        <footer class="footer">
+            <p class="footer_copyright container">Copyright &copy; The Odin Project 2022</p>
+        </footer>
+    </body>
+    </html>
