--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
             <div class="hero__text">
                 <h1 class="hero__title">This website is awesome</h1>
                 <p class="hero__intro">this website has some subtext that hoes here under the main title. It's a smaller font and the color is lower contrast</p>
-                <button class="hero__cta">Sign up</button>
+                <button class="cta">Sign up</button>
             </div>
             <img class="hero__img" src="https://via.placeholder.com/600x270
 C/O https://placeholder.com/ " alt="image placeholder">
@@ -70,6 +70,16 @@ C/O https://placeholder.com/ " alt="image placeholder">
                     </figcaption>
                 </figure>
             </section>
+            </div>
+            <div class="cta__section container">
+                <div class="cta__wrapper">
+                    <div class="cta__text">
+
+                        <h3 class="cta__title">Call to action! It's time!</h3>
+                        <p class="cta__text">Sign up for our product by clicking that button right over there!</p>
+                    </div>
+                    <button class="cta cta--secondary">Sign up</button>
+                </div>
             </div>
         </main>
         <footer class="footer">
